# esp32cam

./: BLE_FUNCTIONALITY_IMPLEMENTATION.md  BLE_IMPLEMENTATION_SUCCESS.md  CLAUDE.md  CMakeLists.txt  ESP32_WIFI_MANAGER_INTEGRATION.md  SCRIPTS_DOCUMENTATION.md  SCRIPTS_README.md  WIFI_CONFIG_TEST.md  build_test.bat  build_test.ps1  config.bat  debug_runtime.md  diagnose_headers.bat  esp32_config.bat  fix_paths.py  fix_vscode.bat  flash_and_monitor.ps1  sdkconfig.backup  sdkconfig.minimal  setup_env.bat  test_ble_functionality.md  test_runtime.ps1
main/: CMakeLists.txt  Kconfig.projbuild  ble_scanner.c  ble_scanner.h  camera_manager.c  camera_manager.h  http_uploader.c  http_uploader.h  idf_component.yml  main.c  main.h  wifi_manager.c  wifi_manager_wrapper.h
